--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "smartcachedb",
-  "version": "0.1.2",
-  "description": "AI-powered adaptive caching for Node.js",
+  "version": "0.1.6",
+  "description": "High-Performance Adaptive Caching for Node.js",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "lru-cache": "^10.4.3",
     "redis": "^4.7.0",
+    "smartcachedb": "^0.1.5",
     "ws": "^8.18.0"
   },
   "devDependencies": {
@@ -21,5 +22,19 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
   },
+  "keywords": [
+    "cache",
+    "caching",
+    "redis",
+    "performance",
+    "nodejs",
+    "LRU",
+    "adaptive caching",
+    "websocket",
+    "data storage",
+    "database caching",
+    "high performance"
+  ],
+  "author": "Fedi Khaled",
   "license": "MIT"
 }
